--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="com.ag.agdms.controller.Main"
+<mvc:View controllerName="comagagdms.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns:core="sap.ui.core"
     xmlns="sap.m">
